--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
